tests/toylang/neg/001574_mutation.toylang
program a = { while else a do sleep; } .
